# store-api

./: .env-example  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py
app/database/: mongo.py
app/models/: base.py  product.py
app/routers/: config.py  product.py
app/schemas/: base.py  product.py
app/usecases/: product.py
